# Projects

./: LICENSE
Shopify Manager/: CMakeLists.txt  README.md
Shopify Manager/Files/: Login.csv
Shopify Manager/Files/Inventory/: Beverage.csv  Cleaning Supply.csv  Personal Care.csv  Snacks & Dairy.csv  Stationary.csv  Toys.csv
Shopify Manager/Files/Staff/: Administrative.csv  Chef.csv  Management.csv  Specialized Roles.csv  Supportive Staff.csv
Shopify Manager/Sale History/04-10-2024/: 08.24.48 PM.csv  08.54.32 PM.csv  09.02.17 PM.csv
Shopify Manager/Sale History/08-10-2024/: 01.52.18 AM.csv  07.57.21 PM.csv  08.08.46 PM.csv  12.14.00 PM.csv  12.28.46 PM.csv
Shopify Manager/Sale History/21-10-2024/: 06.08.58 PM.csv
Shopify Manager/Sale History/25-10-2024/: 09.12.51 AM.csv  11.47.15 AM.csv  12.42.48 PM.csv  12.44.00 PM.csv  12.54.00 AM.csv
Shopify Manager/include/: Authentication.h  Employee.h  Inventory.h  ProcessOrder.h  TransactionRecords.h  UpdateInventory.h
Shopify Manager/src/: Authentication.cpp  Employee.cpp  Inventory.cpp  ProcessOrder.cpp  TransactionRecords.cpp  UpdateInventory.cpp  main.cpp
